<resources>

    <string name="app_name">Jado Notes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="create_date">written:</string>
    <string name="edit_date">Modified: </string>
    <string name="edit_at"> at </string>
    <string name="edited_on"> on </string>
    <plurals name="nb_notes">
        <item quantity="one">note</item>
        <item quantity="other">notes</item>
    </plurals>
    <string-array name="theme_mode">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>
    <string name="delete_message">Do you want to delete this note ?</string>
    <string name="delete_forever">Are sure to delete the notes forever ?</string>
    <string name="restore_message">Are sure to restore this note ?</string>


    <string name="action_annuler">Cancel</string>
    <string name="a_propos">About</string>

    <string name="feed_back_msg"><![CDATA[En cas de souci ou si vous avez des suggestions a me donner afin d’ajouter d’autres fonctionnalités ; n’hésitez pas a me contacter en précisant votre souhait ou problèmes que vous rencontrez , je serai ravi de recevoir votre Feedback .]]></string>
    <string name="feed_back">Feedback</string>
    <string name="rate_msg">Si vous aimez cette application, merci de le noter sur Google Play Store, une note de 5 étoiles m\'encouragera à continuer le developpement.:)</string>
    <string name="notemodeletitre">Welcome to use Jado Note!</string>
    <string name="notemodeleText">Jado Notes is an essential assistant for you to record your mind and make your life organized. \n \n Jado Notes allows you to create and save your notes quickly.You can easy to add notes,and sort your notes by labels or colors and search it later. \n \n But also you could archive your notes,share with your friends and family. \n Last But  you could archive your notes,share with your friends and family. \n \nIf you have any questions or advices, please feel free to contact me! I will do mine best to develop Jado Notes!Hope you can enjoy the better and safer recording in your life!</string>
    <string name="exit_msg">Sur to exit</string>
    <string name="action_oui">Yes</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="note_detail">Detail</string>
    <string name="note_edited">Note Edited</string>
    <string name="editnote_title">Edit note</string>
    <string name="daymode">Light mode</string>
    <string name="night_mode">Dark mode</string>
    <string name="mode_auto">Auto mode</string>
    <string name="add_note_title">Add note</string>
    <string name="note_saved">Note saved</string>
    <string name="choose_style">Choose style</string>
    <string name="apparence_mode">Appearance mode</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="note_deleted">Deleted</string>
    <string name="note_title">Title</string>
    <string name="note_text">Notes</string>
    <string name="backup">Export &amp; Backup</string>
    <string name="theme">Theme</string>
    <string name="apparence">Appearance</string>
    <string name="all_notes">All notes</string>
    <string name="save_note">Save</string>
    <string name="delete_note">Delete</string>
    <string name="edit_note">Edit</string>
    <string name="share_note">Share as text file</string>
    <string name="backup_note_msg">Not available</string>
    <string name="img_description">description image</string>
    <string name="nav_share">Share</string>
    <string name="code_source">Source code</string>
    <string name="help_transl">help us translate</string>
    <string name="nav_rateapp">Rate this app</string>
    <string name="slogant">Quick and easy to use</string>
    <string name="share_app_msg">Jado Notes\n\nTry this app, it is Awesome app for daily tasks.  Also Share and Rate this app.\n\nDownload Link : https://play.google.com/store/apps/details?id=com.jkantech.jadonotes</string>
    <string name="press_again_to_exit">Please click again to exit</string>
    <string name="send_to">Send to ...</string>
    <string name="contact_me">Contact me</string>
    <string name="small_text">Default </string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="send">Send</string>
    <string name="font_size">Font size</string>
    <string name="send_as_picture">Send as picture</string>
    <string name="export_text">Export text</string>
    <string name="backup_notes">Backup notes</string>
    <string name="history_backup">History saved backup data</string>
    <string name="view_as">View as</string>
    <string name="view_as_list">List</string>
    <string name="view_as_grid_2">Grid 2</string>
    <string name="view_as_grid_3">Grid 3</string>
    <string name="theme_color">Theme color</string>
    <string name="all_category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_category_to_display">No category to display</string>
    <string name="category">Category</string>
    <string name="note_background_color">Note background-color</string>
    <string name="speech">Say something!</string>
    <string name="speech_not_available">Speech recognizer is not available in this device</string>
    <string name="max_title_characters">Maximum number of characters (50) reached.</string>
    <string name="add_note_extra">Add new note</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="no_category">No category added</string>
    <string name="add_category">Add category</string>
    <string name="update_category">Update category</string>
    <string name="enter_category">Enter category</string>
    <string name="cat_personal">Personal</string>
    <string name="cat_business">Business</string>
    <string name="cat_insurance">Insurance</string>
    <string name="cat_school">School</string>
    <string name="cat_work">Work</string>
    <string name="pas_de_notes">No Notes</string>
    <string name="searchhint">Search…</string>
    <string name="trash">Trash</string>
    <string name="restore">Restore</string>
    <string name="delete_cat">Do you want to delete this category?</string>
    <string name="no_changed">No changes to make</string>
    <string name="please_enter_cat">Please enter the name of the category</string>
    <string name="no_deleted_note">No note was deleted</string>
    <string name="edit_add_to_fav">Add to Favorites</string>
    <string name="remove_to_fav">Remove from Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="locked_notes">Locked notes</string>
    <string name="lock_note">Lock</string>


</resources>