<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item android:id="@+id/action_save"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_save"
        android:title="@string/save_note" />

    <item android:id="@+id/action_delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_delete"
        android:title="@string/delete_note" />


    <item android:id="@+id/action_edit"
    app:showAsAction="never"
    android:icon="@drawable/ic_baseline_edit"
    android:title="@string/edit_note" />
    <item android:id="@+id/action_share"
    app:showAsAction="never"
    android:icon="@drawable/ic_baseline_share"
    android:title="@string/share_note" />

</menu>