<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="70dp"
    android:orientation="vertical"

    tools:showIn="@layout/activity_backup">
    <Button
        android:id="@+id/backup_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:foreground="?android:attr/selectableItemBackground"

        android:text="@string/export_text"/>
    <Button
        android:id="@+id/backup_notes"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:textAllCaps="false"
        android:text="@string/backup_notes"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="05dp"
            android:textSize="20sp"
            android:textColor="@color/mainTexte"
            android:text="@string/history_backup"/>

        <ImageView
            android:id="@+id/delete_all"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="05dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_baseline_delete_black" />


    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/backup_notes_lis"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"/>




</LinearLayout>