<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12sp">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/exit_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_msg"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/mainTexte"
                android:gravity="center_horizontal" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:text="@string/action_oui"
                    android:textStyle="bold"
                    app:cornerRadius="12sp"
                    android:layout_marginRight="5sp" />

                <Button
                    android:id="@+id/cancel_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:text="@string/action_annuler"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    app:cornerRadius="12sp"
                    android:layout_marginLeft="5sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>