<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jkantech.jadonotes.ui.views.AboutActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout">


            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerCrop"
                android:src="@drawable/cover_header"/>

            <de.hdodenhof.circleimageview.CircleImageView

                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/header_cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-130dp"
                android:padding="30dp"
                android:elevation="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/favicon"
                app:civ_border_width="8dp"
                app:civ_border_color="@color/aboutcolor"/>


            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/aboutbackground"
                android:elevation="4dp"
                android:paddingBottom="24dp">


                <LinearLayout
                    android:id="@+id/contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical">



                    <ImageView
                        android:id="@+id/dev_fb_btn"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:srcCompat="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/dev_mail_btn"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:foreground="?android:attr/selectableItemBackground"

                        android:src="@drawable/gmail" />
                    <ImageView
                        android:id="@+id/dev_whatsapp_btn"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:srcCompat="@drawable/whatsapp" />
                    <ImageView
                        android:id="@+id/dev_gitub_btn"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:srcCompat="@drawable/github" />



                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="70dp">


                    <TextView
                        android:id="@+id/dev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="jkanTech"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TableRow
                        android:id="@+id/line3"
                        android:layout_width="140dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/dev"
                        android:background="#fff"/>
                    <TextView
                        android:id="@+id/services"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text=" Android and web \n apps development."
                        android:textColor="#fff"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/app_DRC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:text="Made with ❤ in DRC"
                        />

                    <TextView
                        android:id="@+id/copyright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Copyright © 2020 -jkanTech"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                    <!--
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/code_source"
                        android:textColor="@color/white"
                        android:textSize="16sp" />



                    <ImageView
                        android:id="@+id/source_code_btn"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:textAllCaps="false"
                        android:src="@drawable/github"
                        android:textStyle="bold" />
                        -->
                      <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:text="@string/help_transl"
                        android:textColor="@color/white"
                        android:textSize="16sp" />



                    <ImageView
                        android:id="@+id/help_translate_btn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:textAllCaps="false"
                        android:src="@drawable/ic_baseline_g_translate"
                        android:textColor="@color/mainText"
                        android:textStyle="bold" />



                </LinearLayout>


            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardabout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/profile_layout"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/app_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/ic_launcher_round"
                        />
                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:layout_centerHorizontal="true"
                        />
                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/app_name"
                        android:textSize="20dp"
                        android:layout_centerHorizontal="true"/>

                    <TableRow
                        android:id="@+id/line"
                        android:layout_width="200dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_below="@id/app_icon"
                        android:background="#000000"/>

                    <TextView
                        android:id="@+id/apptext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_below="@id/line"
                        android:paddingLeft="20dp"
                        android:textSize="18sp"
                        android:text="@string/rate_msg"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/noterapp"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/aboutstylebtn"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/apptext"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:text="Noter l'application"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/feedback"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/noterapp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="20dp"
                        android:textSize="18sp"
                        android:text="@string/feed_back_msg"
                        />







                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


